crates/aranya-policy-compiler/tests/data/type_errors/invert_non_bool_invalid_type.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: invalid type: int
  |
2 |     return !x
  |             ^ expected `bool` but found `int`
